--- a/backend/public/assets/backend/css/style.css
+++ b/backend/public/assets/backend/css/style.css
@@ -230,6 +230,7 @@ h6 {
   background-color: #fff;
   color: #798eb3;
   padding: 15px;
+  padding-left: 0;
 }
 
 .card-title {
@@ -247,7 +248,8 @@ h6 {
 }
 
 .card-body {
-  padding: 0 20px 20px 20px;
+  /* padding: 0 20px 20px 20px; */
+  padding: 20px;
 }
 
 .card-img-overlay {
